--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,47 @@
 {% extends "bootstrap/base.html" %}
 {% block title %}Carga masiva de datos{% endblock %}
-
+{% block styles %}
+{{super()}}
+<!-- Google font -->
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+<!-- Custom stlylesheet -->
+<link type="text/css" rel="stylesheet" href="static/css/style.css" />
+{% endblock %}
 {% block navbar %}
-<div class="container navbar navbar-fixed-top">
-    <!-- <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true">
-                    </span>
-                </a>
-            </div>
-        </div>
-    </nav> -->
+<style>
+    .loader {
+        border: 16px solid #f3f3f3;
+        border-radius: 50%;
+        border-top: 16px solid #3498db;
+        width: 120px;
+        height: 120px;
+        -webkit-animation: spin 2s linear infinite;
+        /* Safari */
+        animation: spin 2s linear infinite;
+    }
+
+    /* Safari */
+    @-webkit-keyframes spin {
+        0% {
+            -webkit-transform: rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+</style>
+<div class="container navbar navbar-fixed-top">    
 </div>
 {% endblock %}
 
@@ -29,16 +58,38 @@
                 <label for="exampleInputFile">Selecciona el archivo a enviar</label>
                 <input type="file" name="archivo" accept=".xlsx,.xls,.mxltx,.xltm" required onchange="validar()" >
             </div>
-            <button type="submit" class="btn btn-success" id="enviar" disabled >Enviar</button>
+            <div>
+                <button type="submit" class="btn btn-success" id="enviar" disabled onclick="loading()" >Enviar
+                </button>
+            </div>
+            
         </form>
     </div>
+    <div class="loader text-center" id="loader" style="display: none;"></div>
+    
 <hr>
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+            {% if 'Error' in message %}
+                <div class="alert alert-danger alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
+                    {{message}}
+                </div>
+            {% else %}
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
+                        {{message}}
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 {% if listado is not defined or listado|length <= 0 %}
     <div class="alert alert-danger" role="alert">No existen datos para mostrar...</div>
 {% else %}
-<table class="table table-stripeed table-hover">
-    <thead>
+<table class="table table-striped table-condensed table-hover pointer">
+    <thead >
         <th colspan="6" class="text-right">
             Cantidad de Registros <span class="badge">{{ listado|length }}</span>
         </th>
@@ -74,9 +125,13 @@
             
             if(archivo !== ''){
                 let boton = document.getElementById("enviar");
-                console.log(boton)
                 boton.disabled = false
             }
+        }
+        
+    function loading(){
+        let mostrar = document.getElementById("loader");
+        mostrar.style = 'display:inline-block'
     }
 </script>
 {% endblock %}
